Made the WebDiskCache use URI:s instead of strings
Signed-off-by: gitta-mannen <mail@janpettersson.com>